changed title classes to id, added titles classes

--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
     </head>
 
     <body>
-        <div class="title-wrapper">
+        <div id="title-wrapper" class="titles">
             <div class="title">Welcome to Richmond</div>
         </div>
 
-        <div class="locations-wrapper">
+        <div id="locations-wrapper" class="titles">
             <div class="locations-title">Locations</div>
         </div>
 
-        <div class="resturants-wrapper">
+        <div id="resturants-wrapper" class="titles">
             <div class="resturants-title">Eats!</div>
         </div>
 
-        <div class="history-wrapper">History
+        <div id="history-wrapper" class="titles">
             <div class="history-title">History of Richmond</div>
         </div>
 
-        <div class="entertainment-wrapper">
+        <div id="entertainment-wrapper" class="titles">
             <div class="entertainment-title">Entertainment</div>
         </div>
 
-        <div class="school-wrapper">
+        <div id="school-wrapper" class="titles">
             <div class="school-title">Schooling</div>
         </div>
 
-        <div class="growth-wrapper">
+        <div id="growth-wrapper" class="titles">
             <div class="growth-title">Growth</div>
         </div>
 
