added navigation bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     </head>
 
     <body>
+        <div id="nav-bar" class="nav-bar">
+            <a href="#home" class="active">Home</a>
+            <a href="#newsblog">News Blog</a>
+            <a href="#food">Restaurants</a>
+            <a href="#lodging">Lodging</a>
+            <a href="#entertainment">Entertainment</a>
+            <a href="#history">History</a>
+        </div>
+
         <div id="title-wrapper" class="titles">
             <div class="title">Welcome to Richmond</div>
         </div>
