added lemaire resturante

--- a/index.html
+++ b/index.html
@@ -33,11 +33,22 @@
             <div class="thevillage">
                 <h2 class="section__subtitle section__subtitle--thevillage">The Village</h2>
                 <p>Located on Grace Street in the heart of VCU, The Village is known nationally as a place to go
-                    when visiting Richmond. This simple dinner has a large selection of great dishes ranging from
-                    full size subs, to pasta dishes, to delicious sandwiches. After finshing a meal, one can choose
-                    one of their famous milkshakes for desert.
+                    when visiting Richmond. This simple diner has a large selection of great dishes ranging from
+                    full size subs, to pasta dishes, to delicious sandwiches. Open and serving for breakfast, lunch, 
+                    dinner, and brunch.
                 </p>
+                <a href="https://www.facebook.com/VillageCafeRVA/">Facebook Page</a>
                 <img src="thevillage-img.jpg">
+            </div>
+
+            <div>
+                <h2>Lemaire Restaurant</h2>
+                <p>Known for its fine dinning, Lemaire Restaurant is one of the top restaurants in Richmond. It is apart
+                    of the world known The Jefferson Hotel, a 5 star hotel according to Forbes. Guest and patrons can
+                    experience exquisit and expensive dishes along with beautifly crafted cocktails and exotic wines. If 
+                    you're looking for a taste of the upper class, Lamire is the place for you.
+                </p>
+                <a href="https://www.lemairerestaurant.com/">Website</a>
             </div>
        </section>
         
