added lunch and supper to food section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     full size subs, to pasta dishes, to delicious sandwiches. Open and serving for breakfast, lunch, 
                     dinner, and brunch.
                 </p>
-                <a href="https://www.facebook.com/VillageCafeRVA/">Facebook Page</a>
+                <a href="https://www.facebook.com/VillageCafeRVA/" class="foodlink">Facebook Page</a>
                 <img src="thevillage-img.jpg">
             </div>
 
@@ -48,7 +48,20 @@
                     experience exquisit and expensive dishes along with beautifly crafted cocktails and exotic wines. If 
                     you're looking for a taste of the upper class, Lamire is the place for you.
                 </p>
-                <a href="https://www.lemairerestaurant.com/">Website</a>
+                <a href="https://www.lemairerestaurant.com/" class="foodlink">Website</a>
+                <img src="lemaire-img.jpg">
+            </div>
+
+            <div>
+                <h2>Lunch and Supper</h2>
+                <p>Nessled in the heart of Scott's Addition, Lunch and Supper is a perfect blend of old and new. Seperated 
+                    into the old restaurant (lunch) and the newer and outdoor restaurant (supper), they've created a mirror
+                    dynamic that creates a great atmosphere. Lunch gives guests the vibe of the classic 'mom and pop' home
+                    feel vibe. Supper gives those an more traditional restaurant feel along with outdoor seating for warmer times.
+                    If your looking for a place that caputres the blend of modern and old vibes, Lunch and Supper is right for you.
+                </p>
+                <a href="https://www.lunchorsupper.com/" class="foodlink"></a>
+                <img src="supper-img.jpg">
             </div>
        </section>
         
